# OrgLog

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: auth.py  logs.py  ws.py
app/core/: config.py  constants.py  database.py  dependencies.py  redis.py  security.py
app/data/database/: mixins.py  session.py
app/data/models/: log_model.py  organization_model.py  project_model.py  user_model.py
app/domain/: log_entry.py
app/domain/enums/: log_level.py
app/infrastructure/: postgres_log_repository.py  postgres_organization_repository.py  postgres_user_repository.py  redis_publisher.py  redis_pubsub.py
app/interfaces/: event_publisher.py  log_repository.py  organization_repository.py  user_repository.py
app/schemas/: auth.py  log_analytics.py  log_query.py  log_request.py  log_response.py
app/services/: auth_service.py  log_analytics_service.py  log_ingestion_service.py  log_query_service.py
app/utils/: db_objects.py  email.py  workername.py
app/workers/: log_worker.py
docs/: auth_implementation.md  v1_scope.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/dashboard/: error-trend-chart.tsx  index.ts  level-distribution-chart.tsx  recent-logs-table.tsx  service-breakdown-chart.tsx  stat-card.tsx
migrations/: env.py
migrations/versions/: 420ad59cdc64_create_logs_table.py  b1a2c3d4e5f6_add_auth_tables.py
(+39 files in other folders)
